一系列易用性改进 1. 实现菜单中“选择路径并导出”功能； 2. 第一次导入文件时自动将输出路径设置为源文件路径； 3. 未设置输出路径时点击开始转换按钮将询问输出路径

--- a/csharp/GUI/MainWindow.xaml
+++ b/csharp/GUI/MainWindow.xaml
@@ -41,11 +41,16 @@
                         </MenuItem>
                         <MenuItem Height="30" Header="导出文件" Icon="{materialDesign:PackIcon Kind=ExportVariant, Size=17}">
                             <MenuItem
-                                Height="30" Header="立即开始转换"
+                                Height="30"
+                                Header="立即开始转换"
                                 InputGestureText="Ctrl+E"
                                 IsEnabled="{Binding IsEnabled, ElementName=StartExecutionButton}"
                                 Click="StartExecutionButton_Click"/>
-                            <MenuItem Height="30" Header="选择输出路径..." InputGestureText="Ctrl+Shift+E"/>
+                            <MenuItem
+                                Height="30"
+                                Header="选择输出路径..."
+                                InputGestureText="Ctrl+Shift+E"
+                                Click="BrowseAndExportMenu_Click"/>
                         </MenuItem>
                         <MenuItem Height="30" Header="重置列表" Icon="{materialDesign:PackIcon Kind=Autorenew, Size=17}" InputGestureText="Ctrl+R"/>
                     </MenuItem>
