主窗体增加最小宽高限制

--- a/csharp/GUI/MainWindow.xaml
+++ b/csharp/GUI/MainWindow.xaml
@@ -10,6 +10,8 @@
     Title="OpenSVIP - 歌声合成工程文件转换器"
     Height="800"
     Width="1200"
+    MinHeight="600"
+    MinWidth="900"
     Closing="Window_Closing">
     <Window.DataContext>
         <local:AppModel/>
