功能性和易用性提升 1. 支持默认导出至源路径或桌面 2. 满足开始转换条件前，启动按钮将无法点击 3. 一些文本改进

--- a/csharp/GUI/App.xaml
+++ b/csharp/GUI/App.xaml
@@ -13,7 +13,9 @@
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/themes/materialdesigntheme.chip.xaml"/>
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/primary/materialdesigncolor.indigo.xaml"/>
             </ResourceDictionary.MergedDictionaries>
+            <local:NotNullConverter x:Key="NotNullConverter"/>
             <local:IndexToBooleanConverter x:Key="IndexToBooleanConverter"/>
+            <local:EnumerableIsNotEmptyConverter x:Key="EnumerableIsNotEmptyConverter"/>
             <local:CollectionToVisibilityConverter x:Key="CollectionToVisibilityConverter"/>
             <local:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
             <local:ReversedVisibilityConverter x:Key="ReversedVisibilityConverter"/>
