--- a/csharp/GUI/MainWindow.xaml
+++ b/csharp/GUI/MainWindow.xaml
@@ -8,7 +8,7 @@
     xmlns:sys="clr-namespace:System;assembly=mscorlib"
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     mc:Ignorable="d"
-    Title="OpenSVIP - 歌声合成工程文件转换器"
+    Title="OpenSVIP - 歌声合成工程文件转换器（预览版本）"
     Height="800"
     Width="1200"
     MinHeight="510"
